language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_type_parameter_sorted_alphabetically.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble(b) {\n  Wibble(a, b)\n}\n"
---
----- BEFORE ACTION

type Wibble(b) {
  Wibble(a, b)
         ↑    
}


----- AFTER ACTION

type Wibble(a, b) {
  Wibble(a, b)
}
