language-server/src/tests/snapshots/gleam_language_server__tests__action__add_missing_type_parameter_to_exising_parameter.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble(t) {\n  Wibble(field: t)\n  Wobble(field: u)\n}\n"
---
----- BEFORE ACTION

type Wibble(t) {
  Wibble(field: t)
  Wobble(field: u)
                ↑ 
}


----- AFTER ACTION

type Wibble(t, u) {
  Wibble(field: t)
  Wobble(field: u)
}
