language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_does_not_label_piped_argument.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1 |> labelled(2)\n}\n\npub fn labelled(a a, b b) { todo }\n    "
---
----- BEFORE ACTION

pub fn main() {
  1 |> labelled(2)
       ↑          
}

pub fn labelled(a a, b b) { todo }
    


----- AFTER ACTION

pub fn main() {
  1 |> labelled(b: 2)
}

pub fn labelled(a a, b b) { todo }
