language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_does_not_label_use.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  use <- labelled(1)\n  todo\n}\n\npub fn labelled(a a, b b) { todo }\n    "
---
----- BEFORE ACTION

pub fn main() {
  use <- labelled(1)
         ↑          
  todo
}

pub fn labelled(a a, b b) { todo }
    


----- AFTER ACTION

pub fn main() {
  use <- labelled(a: 1)
  todo
}

pub fn labelled(a a, b b) { todo }
