language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_in_function_call.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  labelled(1, 2)\n}\n\npub fn labelled(a a, b b) { todo }\n    "
---
----- BEFORE ACTION

pub fn main() {
  labelled(1, 2)
  ↑             
}

pub fn labelled(a a, b b) { todo }
    


----- AFTER ACTION

pub fn main() {
  labelled(a: 1, b: 2)
}

pub fn labelled(a a, b b) { todo }
