language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_in_function_call_uses_shorthand_syntax.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let a = 1\n  labelled(a, 2)\n}\n\npub fn labelled(a a, b b) { todo }\n    "
---
----- BEFORE ACTION

pub fn main() {
  let a = 1
  labelled(a, 2)
  ↑             
}

pub fn labelled(a a, b b) { todo }
    


----- AFTER ACTION

pub fn main() {
  let a = 1
  labelled(a:, b: 2)
}

pub fn labelled(a a, b b) { todo }
