language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_works_on_call_with_wrongly_placed_labels.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  labelled(3, b: 2, 1)\n}\n\npub fn labelled(a a, b b, c c) { todo }\n    "
---
----- BEFORE ACTION

pub fn main() {
  labelled(3, b: 2, 1)
  ↑                   
}

pub fn labelled(a a, b b, c c) { todo }
    


----- AFTER ACTION

pub fn main() {
  labelled(a: 3, b: 2, c: 1)
}

pub fn labelled(a a, b b, c c) { todo }
