language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_works_with_constructors_calls.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  Labelled(1, 2)\n}\n\npub type Labelled {\n  Labelled(Int, b: Int)\n}\n    "
---
----- BEFORE ACTION

pub fn main() {
  Labelled(1, 2)
  ↑             
}

pub type Labelled {
  Labelled(Int, b: Int)
}
    


----- AFTER ACTION

pub fn main() {
  Labelled(1, b: 2)
}

pub type Labelled {
  Labelled(Int, b: Int)
}
