language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_works_with_constructors_calls_with_some_labels.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let a = 1\n  labelled(a, b: 2)\n}\n\npub fn labelled(a a, b b) { todo }\n    "
---
----- BEFORE ACTION

pub fn main() {
  let a = 1
  labelled(a, b: 2)
  ↑                
}

pub fn labelled(a a, b b) { todo }
    


----- AFTER ACTION

pub fn main() {
  let a = 1
  labelled(a:, b: 2)
}

pub fn labelled(a a, b b) { todo }
