language-server/src/tests/snapshots/gleam_language_server__tests__action__add_omitted_labels_works_with_constructors_calls_with_some_labels_1.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  labelled(3, 1, b: 2)\n}\n\npub fn labelled(a a, b b, c c) { todo }\n    "
---
----- BEFORE ACTION

pub fn main() {
  labelled(3, 1, b: 2)
  ↑                   
}

pub fn labelled(a a, b b, c c) { todo }
    


----- AFTER ACTION

pub fn main() {
  labelled(a: 3, c: 1, b: 2)
}

pub fn labelled(a a, b b, c c) { todo }
